# disertation_calculation

./: .gitignore  Cargo.toml  README.md
plot/: function_plot.py  surface_dynamic_plot.py  surface_static_plot.py
results/problem_1/: problem_1, a: 10, b: 15, n_x: 100, n_y: 10, puasson_coef: 0.25, young_modulus: 200, eps: 0.1, function_type: u, load_function: (x - 2.5) * (x - 2.5)
results/problem_2/: problem_3, a: 10, b: 15, n_x: 50, n_y: 20, puasson_coef: 0.25, young_modulus: 200, eps: 0.1, function_type: v, load_function: (x - 2.5) * (x - 2.5)  problem_3, a: 10, b: 15, n_x: 50, n_y: 20, puasson_coef: 0.25, young_modulus: 200, eps: 1, function_type: sigma_x, load_function: (x - 2.5) * (x - 2.5)  sigma_y
results/problem_3/: function_u_1  function_u_2  problem_3, a: 10, b: 15, n_x: 100, n_y: 10, puasson_coef: 0.25, young_modulus: 200, eps: 0.1, function_type: u, load_function: (x - 2.5) * (x - 2.5)  problem_3, a: 10, b: 15, n_x: 50, n_y: 20, puasson_coef: 0.25, young_modulus: 200, eps: 0.1, function_type: sigma_x, load_function: (x - 2.5) * (x - 2.5)
scripts/: problem_3.py  system.py
src/: dynamic_1.rs  integration.rs  lib.rs  main.rs  matrices.rs  polynomials.rs  problem_1.rs  problem_1_2.rs  problem_2.rs  problem_2_1.rs  problem_3.rs  problem_4.rs  static_1.rs  static_2.rs  utils.rs
