[package]
name = "calculation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
rayon = { version = "1.7" }
serde_json = { version = "1.0.96" }
num = { version = "0.4.1" }